--- a/Velocity/Velocity.vcxproj
+++ b/Velocity/Velocity.vcxproj
@@ -69,6 +69,7 @@
     <ClCompile Include="cModel.cpp" />
     <ClCompile Include="cModelLoader.cpp" />
     <ClCompile Include="cMouseControl.cpp" />
+    <ClCompile Include="cObstacle.cpp" />
     <ClCompile Include="cPlayer.cpp" />
     <ClCompile Include="cWNDManager.cpp" />
     <ClCompile Include="GameConstants.cpp" />
@@ -79,6 +80,7 @@
     <ClInclude Include="cModel.h" />
     <ClInclude Include="cModelLoader.h" />
     <ClInclude Include="cMouseControl.h" />
+    <ClInclude Include="cObstacle.h" />
     <ClInclude Include="cPlayer.h" />
     <ClInclude Include="cWNDManager.h" />
     <ClInclude Include="GameConstants.h" />
