--- a/Velocity/Velocity.vcxproj
+++ b/Velocity/Velocity.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="cMouseControl.cpp" />
     <ClCompile Include="cObstacle.cpp" />
     <ClCompile Include="cPlayer.cpp" />
+    <ClCompile Include="cSkyscraper.cpp" />
     <ClCompile Include="cWNDManager.cpp" />
     <ClCompile Include="GameConstants.cpp" />
     <ClCompile Include="main.cpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="cMouseControl.h" />
     <ClInclude Include="cObstacle.h" />
     <ClInclude Include="cPlayer.h" />
+    <ClInclude Include="cSkyscraper.h" />
     <ClInclude Include="cWNDManager.h" />
     <ClInclude Include="GameConstants.h" />
     <ClInclude Include="wglext.h" />
